<resources>
    <string name="app_name">Remote Control</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Remote Control</string>
    <string name="second_fragment_label">About</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Remote Control Center strings -->
    <string name="remote_control_center">Remote Control Center</string>
    <string name="wireless_device_control">Wireless device control made easy</string>
    <string name="status_active">ACTIVE</string>
    <string name="status_inactive">INACTIVE</string>
    <string name="status_label">Status:</string>
    <string name="obtaining_ip">Obtaining IP…Device IP Address</string>
    <string name="device_ip_address">Device IP Address</string>
    <string name="use_this_ip">Use this IP address to connect from your control device</string>
    <string name="start_remote_control">START REMOTE CONTROL</string>
    <string name="stop_remote_control">STOP REMOTE CONTROL</string>
    <string name="welcome_message">Welcome to Remote Control Hub!</string>
    <string name="ready_message">Your device is ready to be controlled remotely via WiFi.</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    
    <!-- About screen strings -->
    <string name="about_description">Remote Control Hub allows you to control your Android device wirelessly from another device on the same network.</string>
    <string name="features_title">Features:</string>
    <string name="feature_camera">📷 Camera Control - Open camera and take pictures remotely</string>
    <string name="feature_properties">📱 Device Properties - Query device information</string>
    <string name="feature_wifi">🌐 WiFi Based - Works over your local network</string>
    <string name="feature_secure">🔒 Secure - Only accessible from your local network</string>
    <string name="usage_title">To use this app:</string>
    <string name="usage_step1">1. Make sure both devices are on the same WiFi network</string>
    <string name="usage_step2">2. Start the remote control service</string>
    <string name="usage_step3">3. Note the IP address shown</string>
    <string name="usage_step4">4. Use the Python control script with this IP address</string>
    <string name="about_footer">The service will run in the background and show a notification when active. You can control the camera, take pictures, and query device properties remotely.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>